# solvatron

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/solvatron/: __init__.py  __main__.py  cli.py  common.py  conda.py  libmambapy.py  mamba.py  pixi.py  rattler.py
tests/: test_all.py
